# perfectmd

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  worklog.md
.github/workflows/: build.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/editor/: EmptyState.tsx  FloatingToolbar.tsx  Header.tsx  MarkdownEditor.tsx  Sidebar.tsx  TopToolbar.tsx
src/lib/: document-export.ts  html-to-markdown.ts
src/store/: editor-store.ts
